Navbar: fix notifications bg color, fix dropdown z-index, change avatars

--- a/src/app/styles/_base.scss
+++ b/src/app/styles/_base.scss
@@ -382,6 +382,7 @@ a:link {
 
   &:hover .widget-controls-hover {
     opacity: 1;
+    z-index: auto;
   }
 
   &.widget-sm {
